--- a/pom.xml
+++ b/pom.xml
@@ -29,4 +29,16 @@
             <version>18.0.2</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>StartApplication.MainFX</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
